fix(entry-cover): remove color property for link to enhance visibility

--- a/assets/css/common/post-entry.css
+++ b/assets/css/common/post-entry.css
@@ -102,6 +102,5 @@
 }
 
 .entry-cover a {
-    color: var(--secondary);
     box-shadow: 0 1px 0 var(--primary);
 }
